# aoc

./: README.md
2015/c/: Makefile
2015/c/src/: day1.c  days.h  lib.c  lib.h  main.c
2015/go/: day1.go  doc.go  gen.go  go.mod
2015/go/cmd/aoc2015/: main.go
2015/go/cmd/day1/: main.go
2015/python/: aoc2015.py  day1.py  lib.py
2015/rust/: Cargo.toml  build.rs
2015/rust/src/: day1.rs  main.rs
